# flash-converter

./: .gitignore  LICENSE.md  README.md  docker-compose.yaml  mkdocs.yml  tasks.Dockerfile  tasks.requirements.txt  ui.Dockerfile  wf.Dockerfile  wf.requirements.txt  ws.Dockerfile  ws.requirements.txt
docs/: index.md
docs/css/: custom.css
docs/private/: flash-converter-icon.xcf
flash-converter-demo/: LICENSE.md  README.md  pyproject.toml
flash-converter-demo/src/flash_converter_demo/: voice_seg.py  voice_srt.py  workflow.csv  workflow_generator.py
flash-converter-demo/src/flash_converter_demo/subtitle/: convert_to_subtitles.py  end_subtitles.py  start_subtitles.py  subtitle_attrs.py
flash-converter-demo/src/flash_converter_demo/video/: convert_to_audio.py  detect_voice.py  embed_subtitles.py  end_video.py  preflight_check.py  process_subtitles.py  start_video.py  video_attrs.py
flash-converter-tasks/: README.md  pyproject.toml
flash-converter-tasks/src/flash_converter/tasks/: __about__.py  __init__.py  app.py  config.py  video_converter.py
flash-converter-tasks/tests/: test_about.py
flash-converter-ui/: README.md  eslint.config.js  index.html  mkdocs.yml  package-lock.json  package.json  vitest.config.ts
flash-converter-ui/docs/: index.md
flash-converter-ui/docs/dev/: code-formatting.md  documentation.md  find-package-dir.js  material-ui-integration.md
flash-converter-ui/src/: App.tsx  index.css  main.tsx
flash-converter-ui/src/api/video-tasks/: config.ts  service.ts
flash-converter-ui/src/components/: ThemeLayout.tsx  VideoTaskList.tsx
flash-converter-ui/src/components/video-tasks/: UploadForm.tsx  VideoTaskList.tsx
flash-converter-ui/src/store/video-tasks/: useVideoTasks.ts  videoTasksReducer.ts  videoTasksStore.test.ts  videoTasksStore.ts
flash-converter-ui/src/types/: video-task.ts
flash-converter-ui/src/types/common/: errors.ts
flash-converter-ui/src/types/video-tasks/: taskCommands.ts  videoTask.ts
flash-converter-wf/: README.md  pyproject.toml
flash-converter-wf/src/flash_converter_wf/: __about__.py  __main__.py  app.py  cli.py  config.py  launcher.py  server.py
flash-converter-wf/src/flash_converter_wf/subtitle/: convert_to_subtitles.py  subtitle_attrs.py  subtitle_model.py
flash-converter-wf/src/flash_converter_wf/video/: convert_to_audio.py  detect_voice.py  embed_subtitles.py  exceptions.py  extract_audio_track.py  preflight_check.py  process_subtitles.py  video_attrs.py  video_model.py
flash-converter-wf/tests/subtitle/: test_subtitle_model.py
flash-converter-ws/: README.md  pyproject.toml
flash-converter-ws/src/flash_converter/ws/: __about__.py  __main__.py  api.py  config.py  router.py  schema.py
tests/: end-to-end.http  http-client.env.json
