[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flash-converter-demo"
dynamic = ["version"]
description = 'Flash converter demo applications'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Laurent LAPORTE", email = "laurent.laporte.pro@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "pydub~=0.25.1",
    "torch~=2.2.2",
    "whisper~=1.1.10",
]

[project.urls]
Documentation = "https://github.com/Laurent LAPORTE/flash-converter-demo#readme"
Issues = "https://github.com/Laurent LAPORTE/flash-converter-demo/issues"
Source = "https://github.com/Laurent LAPORTE/flash-converter-demo"

[tool.hatch.version]
path = "src/flash_converter_demo/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/flash_converter_demo tests}"

[tool.coverage.run]
source_pkgs = ["flash_converter_demo", "tests"]
branch = true
parallel = true
omit = [
  "src/flash_converter_demo/__about__.py",
]

[tool.coverage.paths]
flash_converter_demo = ["src/flash_converter_demo", "*/flash-converter-demo/src/flash_converter_demo"]
tests = ["tests", "*/flash-converter-demo/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
