[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flash-converter-wf"
dynamic = ["version"]
description = 'Workflow to embed subtitles into video files.'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
    { name = "Laurent LAPORTE", email = "laurent.laporte.pro@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    # License
    "License :: OSI Approved :: MIT License",
    # Video processing: voice extraction and subtitles embedding
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
    # Handle video files and subtitles
    "Topic :: File Formats",
    # Web interface
    "Environment :: Web Environment",
    # Supported languages
    "Natural Language :: English",
    "Natural Language :: French",
    # Frameworks
    "Framework :: Celery",
    "Framework :: Pydantic",
    # Includes complete type annotations (PEP 561) in source code
    "Typing :: Typed",
]
dependencies = [
    "celery~=5.4.0",
    "click~=8.1.7",
    "pika~=1.3.2",
    "pydantic~=2.10.3",
    "pydantic-settings~=2.6.1",
    "redis~=5.2.0",
]

[project.optional-dependencies]
# The optional dependencies "worker" are used when installing the Celery worker.
# These dependencies are not required to install "flash-converter-wf" as a library (especially for FastAPI).
# Use `uv add --optional worker <opt-lib>` to add and install an optional dependency.
worker = []

[project.urls]
Documentation = "https://github.com/laurent-laporte-pro/flash-converter#readme"
Issues = "https://github.com/laurent-laporte-pro/flash-converter/issues"
Source = "https://github.com/laurent-laporte-pro/flash-converter"

[tool.hatch.version]
path = "src/flash_converter_wf/__about__.py"
attr = "__version__"

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.12", "3.13"]

# ----------------------------
# Type checking and linting
# ----------------------------

[tool.hatch.envs.types]
extra-dependencies = [
    "mypy>=1.0.0",
    "celery-types~=0.22.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/flash_converter_wf tests}"

# ----------------------------
# Configuration of ruff
# ----------------------------

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]
exclude = []

# --------------------------------
# Configuration of tests coverage
# --------------------------------

[tool.coverage.run]
source_pkgs = ["flash_converter_wf", "tests"]
branch = true
parallel = true
omit = [
    "src/flash_converter_wf/__about__.py",
]

[tool.coverage.paths]
flash_converter_wf = ["src/flash_converter_wf", "*/flash-converter-wf/src/flash_converter_wf"]
tests = ["tests", "*/flash-converter-wf/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
