[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flash-converter-ws"
dynamic = ["version"]
description = 'Web service to embed subtitles in videos automatically.'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["video", "audio", "converter", "webservice"]
authors = [
    { name = "Laurent LAPORTE", email = "laurent.laporte.pro@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    # Project dependencies
    "flash-converter-wf",
    # Third-party dependencies
    "celery~=5.4.0",
    "fastapi~=0.115.5",
    "pika~=1.3.2",
    "pydantic~=2.10.2",
    "pydantic-settings~=2.6.1",
    "python-multipart~=0.0.19",
    "redis~=5.2.0",
    "uvicorn~=0.32.1",
]

[project.urls]
Documentation = "https://github.com/laurent-laporte-pro/flash-converter#readme"
Issues = "https://github.com/laurent-laporte-pro/flash-converter/issues"
Source = "https://github.com/laurent-laporte-pro/flash-converter"

[tool.hatch.version]
path = "src/flash_converter/ws/__about__.py"
attr = "__version__"

[tool.hatch.build.targets.wheel]
packages = ["src/flash_converter"]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.12"]

# ----------------------------
# Type checking and linting
# ----------------------------

[tool.hatch.envs.types]
extra-dependencies = [
    "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --namespace-packages --package flash_converter.ws --install-types --non-interactive"

# ----------------------------
# Configuration of ruff
# ----------------------------

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]
exclude = ["src/flash_converter/ws/__main__.py"]

# --------------------------------
# Configuration of tests coverage
# --------------------------------

[tool.coverage.run]
source_pkgs = ["flash_converter.ws", "tests"]
branch = true
parallel = true
omit = [
    "src/flash_converter/ws/__about__.py",
]

[tool.coverage.paths]
flash_converter_ws = ["src/flash_converter/ws", "*/flash-converter-ws/src/flash_converter/ws"]
tests = ["tests", "*/flash-converter-ws/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.uv.sources]
flash-converter-wf = { path = "../flash-converter-wf", editable = true }
